@@ -1,3 +1,7 @@
+2003-11-29  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* src/boards/python/redraw.py: added display of level and coordinate
+
 2003-11-26  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* src/boards/python/redraw.py: added more target
